--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".ConstellationActivity" />
+        <activity android:name=".NameActivity" />
+        <activity android:name=".ResultActivity" />
+        <activity android:name=".TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConstellationActivity" />
-        <activity android:name=".NameActivity" />
-        <activity android:name=".ResultActivity" />
-        <activity android:name=".TestActivity"></activity>
     </application>
 
 </manifest>
