--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
         android:roundIcon="@drawable/money"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".ConstellationActivity" />
         <activity android:name=".NameActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".TestActivity">
+
+        </activity>
+        <activity android:name=".AbsoluteActivity" />
+        <activity android:name=".ConstraintLayoutActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AbsoluteActivity"></activity>
     </application>
 
 </manifest>
