--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,26 +4,31 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/money"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/money"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ConstellationActivity" />
-        <activity android:name=".NameActivity" />
-        <activity android:name=".ResultActivity" />
-        <activity android:name=".TestActivity">
-
-        </activity>
-        <activity android:name=".AbsoluteActivity" />
-        <activity android:name=".ConstraintLayoutActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- AppTheme.Constellation 테마지정 -->
+        <activity
+            android:name=".ConstellationActivity"
+            android:theme="@style/AppTheme.Constellation" />
+        <!-- AppTheme.Name 테마지정 -->
+        <activity
+            android:name=".NameActivity"
+            android:theme="@style/AppTheme.Name" />
+        <!-- AppTheme.Result 테마지정 -->
+        <activity
+            android:name=".ResultActivity"
+            android:theme="@style/AppTheme.Result" />
+        <activity android:name=".TestActivity" />
+        <activity android:name=".AbsoluteActivity" />
+        <activity android:name=".ConstraintLayoutActivity" />
     </application>
-
 </manifest>
